# Boundary_Sampled_Halfspaces

./: .gitignore  CMakeLists.txt  README.md  main.cpp
apps/: BSHStates.h  PSIStates.h  ScopedTimer.h  UI.h  bsh_cli.cpp  bsh_cli_add_new_implicit.cpp  bsh_cli_sample_reduction.cpp  bsh_cli_search_for_connected.cpp  bsh_ui.cpp  config.cpp  config.h  efficient_ransac_fitting.cpp  efficient_ransac_test.cpp  export_sampled_implicits.cpp  graph_cut.cpp  mesh_arrangement.cpp  mesh_arrangement_utils.cpp  mesh_arrangement_utils.h  mixed_fitting.cpp  psi_cli.cpp  psi_cli_add_new_implicit.cpp  psi_cli_sample_reduction.cpp  psi_cli_search_for_connected.cpp  psi_ui.cpp  ui.cpp  vipss_fitting.cpp
apps/PyMesh/: CellPartition.h
cmake/: armadillo.cmake  dirent.cmake  fast_arrangement.cmake  libigl.cmake  nlohmann-json.cmake  nlopt.cmake
data/Bot_Arm_Peg_merged/: 0_sample.xyz  10_sample.xyz  11_sample.xyz  12_sample.xyz  13_sample.xyz  1_sample.xyz  2_sample.xyz  3_sample.xyz  4_sample.xyz  5_sample.xyz  6_sample.xyz  7_sample.xyz  8_sample.xyz  9_sample.xyz  config.json  grid.json  grid2.json  topo_result.grid
data/Bot_Eye/: 0_sample.xyz  1_sample.xyz  2_sample.xyz  3_sample.xyz  4_sample.xyz  5_sample.xyz  6_sample.xyz  config.json  grid.json  mesh_result.grid  topo_result.grid
data/abstract_i/: 1_sample.xyz  2_sample.xyz  3_sample.xyz  4_sample.xyz  5_sample.xyz  7_sample.xyz  config.json
data/barque_autoFit_reduced/: 10_sample.xyz  11_sample.xyz  12_sample.xyz  1_rbfCoeff  1_sample.xyz  2_rbfCoeff  3_sample.xyz  4_rbfCoeff  5_sample.xyz  6.xyz  6_sample.xyz  8_sample.xyz  grid.json
data/beads_on_ring/: config.json
data/blub/: config.json  input_2_rbfCoeff  input_3_rbfCoeff
data/bump_reduced/: 1.xyz  1_rbfCoeff  1_sample.xyz  2_sample.xyz  3.xyz  3_rbfCoeff  3_sample.xyz  4.xyz  4_rbfCoeff  4_sample.xyz  5.xyz  5_rbfCoeff  5_sample.xyz  6_sample.xyz  7_sample.xyz  8_sample.xyz  9_sample.xyz  config.json  grid.json  grid_64.json
data/corner_cutting/: config.json  input_1.xyz  input_1_rbfCoeff  input_1_sample.xyz  input_2.xyz  input_2_rbfCoeff  input_2_sample.xyz  input_3.xyz  input_3_rbfCoeff  input_3_sample.xyz  input_4.xyz  input_4_rbfCoeff  input_4_sample.xyz  result.grid
data/elk2_autoFit_reduced/: 2.xyz  2_sample.xyz  3_sample.xyz  4.xyz  4_sample.xyz  5.xyz  6.xyz  6_sample.xyz  8_rbfCoeff  8_sample.xyz  9_sample.xyz  grid.json
data/elk_2/: 3.xyz  3_rbfCoeff  3_sample.xyz  5_sample.xyz  6_sample.xyz  7_sample.xyz  config.json
data/elk_reduced/: 10_sample.xyz  1_sample.xyz  2_sample.xyz  3_sample.xyz  4.xyz  4_rbfCoeff  4_sample.xyz  5_sample.xyz  6_sample.xyz  7_sample.xyz  8_sample.xyz  9_sample.xyz  config.json
data/grid/: grid_1024.json  grid_128.json  grid_32.json  grid_512.json
data/heart/: 1_sample.xyz  3_sample.xyz  4_sample.xyz  5_sample.xyz  6_sample.xyz  7_sample.xyz  8_sample.xyz  config.json
data/hook_reduced/: 1.xyz  1_rbfCoeff  1_sample.xyz  2_sample.xyz  3.xyz  3_rbfCoeff  3_sample.xyz  4.xyz  4_rbfCoeff  4_sample.xyz  5_sample.xyz  6_sample.xyz  config.json  grid.json  grid_64.json
data/inverse_csg_eg_159_sparse/: 10_sample.xyz  11_sample.xyz  12_sample.xyz  13_sample.xyz  14_sample.xyz  15_sample.xyz  1_sample.xyz  2_sample.xyz  3_sample.xyz  4_sample.xyz  5_sample.xyz  6_sample.xyz  7_sample.xyz  8_sample.xyz  9_sample.xyz  config.json  grid.json  param.json
data/inverse_csg_eg_168_new_reduced_64/: 10_sample.xyz  11_sample.xyz  12_sample.xyz  13_sample.xyz  14_sample.xyz  15_sample.xyz  16_sample.xyz  2_sample.xyz  3_sample.xyz  4_sample.xyz  5_sample.xyz  6_sample.xyz  7_sample.xyz  8_sample.xyz  9_sample.xyz  config.json  grid_64.json
data/inverse_csg_eg_168_new_sparse/: 10_sample.xyz  11_sample.xyz  12_sample.xyz  13_sample.xyz  14_sample.xyz  15_sample.xyz  16_sample.xyz  17_sample.xyz  1_sample.xyz  3_sample.xyz  4_sample.xyz  5_sample.xyz  6_sample.xyz  7_sample.xyz  8_sample.xyz  9_sample.xyz  grid.json
data/octaflower_2/: 1_rbfCoeff  1_sample.xyz  2_rbfCoeff  2_sample.xyz  3_sample.xyz  6.xyz  6_rbfCoeff  6_sample.xyz  7.xyz  7_sample.xyz  8.xyz  config.json  grid.json
data/octaflower_reduced/: 1.xyz  1_rbfCoeff  1_sample.xyz  2.xyz  2_rbfCoeff  2_sample.xyz  3.xyz  3_rbfCoeff  3_sample.xyz  4.xyz  4_rbfCoeff  4_sample.xyz  5.xyz  5_rbfCoeff  5_sample.xyz  6.xyz  6_rbfCoeff  6_sample.xyz  7.xyz  7_rbfCoeff  7_sample.xyz  8.xyz  8_rbfCoeff  8_sample.xyz  config.json
data/party_cup/: config.json  input_1.xyz  input_1_rbfCoeff  input_1_sample.xyz  input_2.xyz  input_2_rbfCoeff  input_2_sample.xyz  input_3.xyz  input_3_rbfCoeff  input_3_sample.xyz
data/pawn/: config.json  input_1_rbfCoeff  input_1_sample.xyz  input_2.xyz  input_2_sample.xyz  input_3.xyz  result.grid
data/pawn_2/: 13_rbfCoeff  16_sample.xyz  1_rbfCoeff  1_sample.xyz  2_sample.xyz  3_sample.xyz  4_sample.xyz  5_sample.xyz  6_rbfCoeff  6_sample.xyz  7_sample.xyz  8_rbfCoeff  8_sample.xyz  config.json
data/pawn_mixed/: config.json  grid.json  input_1.xyz  input_1_rbfCoeff  input_2_sample.xyz  input_3_rbfCoeff  input_3_sample.xyz
data/phone2_reduced/: 3_sample.xyz  4.xyz  4_rbfCoeff  4_sample.xyz  5_sample.xyz  7.xyz  7_rbfCoeff  7_sample.xyz  8.xyz  8_rbfCoeff  8_sample.xyz  config.json  grid_64.json
data/phone_simple_sparse/: 1_sample.xyz  2_sample.xyz  3.xyz  3_rbfCoeff  3_sample.xyz  4.xyz  4_rbfCoeff  4_sample.xyz  config.json  grid.json
data/primitives/: config.json  grid.json
data/random_sculpture/: 1.xyz  1_rbfCoeff  1_sample.xyz  (+14 more)
src/: BSH.cpp  BSH.h  BSH_Param.cpp  BSH_Param.h  Cone_sImplicit.cpp  Cone_sImplicit.h  Cylinder_sImplicit.cpp  Cylinder_sImplicit.h  Grid.cpp  Grid.h  GridSpec.cpp  GridSpec.h  Hermite_RBF_sImplicit.cpp  Hermite_RBF_sImplicit.h  Mesh_BSH.cpp  Mesh_BSH.h  Mesh_PSI.cpp  Mesh_PSI.h  PSI.cpp  PSI.h  PSI_Param.cpp  PSI_Param.h  Plane_sImplicit.cpp  Plane_sImplicit.h  Point.h  Quadric_sImplicit.cpp  Quadric_sImplicit.h  Sampled_Implicit.cpp  Sampled_Implicit.h  Sphere_sImplicit.cpp  Sphere_sImplicit.h  Topo_BSH.cpp  Topo_BSH.h  Topo_PSI.cpp  Topo_PSI.h  Torus_sImplicit.cpp  Torus_sImplicit.h  Vec3.h  config.cpp  config.h
(+604 files in other folders)
